# name: test_create_fake_unpaired[uvloop-False-False]
  <class 'dict'> {
    '_id': 'sample_1',
    'all_read': True,
    'all_write': True,
    'created_at': datetime.datetime(2015, 10, 6, 20, 0),
    'format': 'fastq',
    'group': 'none',
    'group_read': True,
    'group_write': True,
    'hold': True,
    'host': 'Vine',
    'is_legacy': False,
    'isolate': 'Isolate A1',
    'labels': <class 'list'> [
    ],
    'library_type': 'normal',
    'locale': '',
    'name': 'Fake SAMPLE_1',
    'notes': 'Serious inside else memory if six.',
    'nuvs': False,
    'paired': False,
    'pathoscope': False,
    'quality': None,
    'ready': False,
    'subtractions': <class 'list'> [
    ],
    'user': <class 'dict'> {
      'id': '7CtBo2yG',
    },
  }
---
# name: test_create_fake_unpaired[uvloop-False-True]
  <class 'dict'> {
    '_id': 'sample_1',
    'all_read': True,
    'all_write': True,
    'created_at': datetime.datetime(2015, 10, 6, 20, 0),
    'format': 'fastq',
    'group': 'none',
    'group_read': True,
    'group_write': True,
    'hold': True,
    'host': 'Vine',
    'is_legacy': False,
    'isolate': 'Isolate A1',
    'labels': <class 'list'> [
    ],
    'library_type': 'normal',
    'locale': '',
    'name': 'Fake SAMPLE_1',
    'notes': 'Serious inside else memory if six.',
    'nuvs': False,
    'paired': False,
    'pathoscope': False,
    'quality': None,
    'ready': False,
    'subtractions': <class 'list'> [
    ],
    'user': <class 'dict'> {
      'id': '7CtBo2yG',
    },
  }
---
# name: test_create_fake_unpaired[uvloop-True-False]
  <class 'dict'> {
    '_id': 'sample_1',
    'all_read': True,
    'all_write': True,
    'artifacts': <class 'list'> [
    ],
    'created_at': datetime.datetime(2015, 10, 6, 20, 0),
    'format': 'fastq',
    'group': 'none',
    'group_read': True,
    'group_write': True,
    'hold': True,
    'host': 'Vine',
    'is_legacy': False,
    'isolate': 'Isolate A1',
    'labels': <class 'list'> [
    ],
    'library_type': 'normal',
    'locale': '',
    'name': 'Fake SAMPLE_1',
    'notes': 'Serious inside else memory if six.',
    'nuvs': False,
    'paired': False,
    'pathoscope': False,
    'quality': <class 'dict'> {
      'all_read': False,
      'all_write': False,
      'bases': <class 'list'> [
        <class 'list'> [
          31,
          32,
          31,
          31,
          32,
        ],
        <class 'list'> [
          32,
          31,
          32,
          32,
          32,
        ],
        <class 'list'> [
          31,
          32,
          32,
          32,
          31,
        ],
        <class 'list'> [
          31,
          31,
          32,
          31,
          32,
        ],
        <class 'list'> [
          32,
          31,
          32,
          31,
          31,
        ],
      ],
      'composition': <class 'list'> [
        <class 'list'> [
          19,
          90,
          1,
          1,
        ],
        <class 'list'> [
          29,
          6,
          74,
          1,
        ],
        <class 'list'> [
          82,
          69,
          1,
          1,
        ],
        <class 'list'> [
          78,
          88,
          1,
          1,
        ],
      ],
      'count': 8997239604,
      'encoding': '
        Sanger / Illumina 1.9
  
      ',
      'gc': 90,
      'group_read': False,
      'group_write': False,
      'hold': False,
      'length': <class 'list'> [
        42,
        78,
      ],
      'paired': True,
      'sequences': <class 'list'> [
        3909,
        8896,
        1494,
        5243,
        1786,
        9031,
        2044,
        8852,
        9882,
        7290,
        9769,
        5194,
        4756,
        3102,
        540,
        7807,
        1471,
        2450,
        1314,
        8594,
        8549,
        3525,
        9497,
        7382,
        5855,
        5313,
        7969,
        3119,
        265,
        1919,
        6095,
        5448,
        1018,
      ],
    },
    'reads': <class 'list'> [
      <class 'dict'> {
        'id': 1,
        'name': 'reads_1.fq.gz',
        'name_on_disk': 'reads_1.fq.gz',
        'sample': 'sample_1',
        'size': 16700094,
        'upload': None,
        'uploaded_at': datetime.datetime(2015, 10, 6, 20, 0),
      },
    ],
    'ready': True,
    'subtractions': <class 'list'> [
    ],
    'user': <class 'dict'> {
      'administrator': False,
      'handle': 'leeashley',
      'id': '7CtBo2yG',
    },
  }
---
# name: test_create_fake_unpaired[uvloop-True-True]
  <class 'dict'> {
    '_id': 'sample_1',
    'all_read': True,
    'all_write': True,
    'artifacts': <class 'list'> [
    ],
    'created_at': datetime.datetime(2015, 10, 6, 20, 0),
    'format': 'fastq',
    'group': 'none',
    'group_read': True,
    'group_write': True,
    'hold': True,
    'host': 'Vine',
    'is_legacy': False,
    'isolate': 'Isolate A1',
    'labels': <class 'list'> [
    ],
    'library_type': 'normal',
    'locale': '',
    'name': 'Fake SAMPLE_1',
    'notes': 'Serious inside else memory if six.',
    'nuvs': False,
    'paired': False,
    'pathoscope': False,
    'quality': <class 'dict'> {
      'all_read': False,
      'all_write': False,
      'bases': <class 'list'> [
        <class 'list'> [
          31,
          32,
          31,
          31,
          32,
        ],
        <class 'list'> [
          32,
          31,
          32,
          32,
          32,
        ],
        <class 'list'> [
          31,
          32,
          32,
          32,
          31,
        ],
        <class 'list'> [
          31,
          31,
          32,
          31,
          32,
        ],
        <class 'list'> [
          32,
          31,
          32,
          31,
          31,
        ],
      ],
      'composition': <class 'list'> [
        <class 'list'> [
          19,
          90,
          1,
          1,
        ],
        <class 'list'> [
          29,
          6,
          74,
          1,
        ],
        <class 'list'> [
          82,
          69,
          1,
          1,
        ],
        <class 'list'> [
          78,
          88,
          1,
          1,
        ],
      ],
      'count': 8997239604,
      'encoding': '
        Sanger / Illumina 1.9
  
      ',
      'gc': 90,
      'group_read': False,
      'group_write': False,
      'hold': False,
      'length': <class 'list'> [
        42,
        78,
      ],
      'paired': True,
      'sequences': <class 'list'> [
        3909,
        8896,
        1494,
        5243,
        1786,
        9031,
        2044,
        8852,
        9882,
        7290,
        9769,
        5194,
        4756,
        3102,
        540,
        7807,
        1471,
        2450,
        1314,
        8594,
        8549,
        3525,
        9497,
        7382,
        5855,
        5313,
        7969,
        3119,
        265,
        1919,
        6095,
        5448,
        1018,
      ],
    },
    'reads': <class 'list'> [
      <class 'dict'> {
        'id': 1,
        'name': 'reads_1.fq.gz',
        'name_on_disk': 'reads_1.fq.gz',
        'sample': 'sample_1',
        'size': 35441105,
        'upload': None,
        'uploaded_at': datetime.datetime(2015, 10, 6, 20, 0),
      },
      <class 'dict'> {
        'id': 2,
        'name': 'reads_2.fq.gz',
        'name_on_disk': 'reads_2.fq.gz',
        'sample': 'sample_1',
        'size': 41550519,
        'upload': None,
        'uploaded_at': datetime.datetime(2015, 10, 6, 20, 0),
      },
    ],
    'ready': True,
    'subtractions': <class 'list'> [
    ],
    'user': <class 'dict'> {
      'administrator': False,
      'handle': 'leeashley',
      'id': '7CtBo2yG',
    },
  }
---
